1834
This fix was floated last summer and works the same way with replating, viz, the predef imports are pulled to the top of the compilation unit.
{noformat}
apm@mara:~$ skala -cp "" 
Welcome to Scala!
version 2.11.0-20131104-225025-6b780988ac (OpenJDK 64-Bit Server VM, Java 1.7.0_25).
Type in expressions and I will evaluate them. Or try :help.

scala> "hello".size
res0: Int = 5

scala> import Predef.{ augmentString => _ }
import Predef.{augmentString=>_}

scala> "hello".size
<script>:1: error: value size is not a member of String
"hello".size
        ^
{noformat}
